WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301074
Fix MALLOC_HEAP_BREAKDOWN builds
https://bugs.webkit.org/show_bug.cgi?id=301074
Summary
Fix MALLOC_HEAP_BREAKDOWN builds
Pawel Lampe
Reported
2025-10-20 00:59:40 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2025-10-20 01:02:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52644
EWS
Comment 2
2025-10-20 16:53:56 PDT
Committed
301839@main
(a235408c2b4e): <
https://commits.webkit.org/301839@main
> Reviewed commits have been landed. Closing PR #52644 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-20 16:54:12 PDT
<
rdar://problem/163074649
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug