Fix MALLOC_HEAP_BREAKDOWN builds https://bugs.webkit.org/show_bug.cgi?id=301074

Reviewed by Fujii Hironori.

This change fixes compilation when MALLOC_HEAP_BREAKDOWN is used.

Canonical link: https://commits.webkit.org/301839@main